# rollups

./: .dockerignore  .gitignore  .gitmodules  .prettierignore  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  codegen.yml  docker-bake.hcl  docker-bake.override.hcl  docker-bake.platforms.hcl  docker-compose.yml  entrypoint-docker.sh  hardhat.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.prod.json  wait-for-file.sh
near-chain/contracts/: Cargo.toml  build.rs
near-chain/contracts/src/: lib.rs
near-chain/types/: Cargo.toml
near-chain/types/src/: authority_claims.rs  input_box.rs  lib.rs
offchain/: Cargo.toml  Dockerfile  README.md  build.rs  clippy.toml
offchain/advance-runner/: Cargo.toml  README.md
offchain/advance-runner/src/: broker.rs  config.rs  error.rs  lib.rs  main.rs  runner.rs
offchain/advance-runner/tests/: host_integration.rs  integration.rs  server_integration.rs
offchain/authority-claimer/: Cargo.toml
offchain/authority-claimer/src/: claimer.rs  lib.rs  listener.rs  main.rs  metrics.rs  sender.rs
offchain/contracts/: Cargo.toml  README.md  build.rs
offchain/contracts/src/: lib.rs
offchain/data/: Cargo.toml  README.md  build.rs  diesel.toml
offchain/data/graphql/: typeDefs.graphql
offchain/data/src/: config.rs  error.rs  generate_schema.rs  lib.rs  migrations.rs  pagination.rs  repository.rs  schema.rs  types.rs
offchain/data/tests/: migrations.rs  repository.rs
offchain/data/util/: populate.sql
offchain/delegate_server/: Cargo.toml  Dockerfile  entrypoint-delegate-server.sh  entrypoint.sh  run-delegate-server.sh  run_delegate_server.sh
offchain/delegate_server/src/: delegate_server_main.rs  fee_manager_server.rs  input_server.rs  lib.rs  main.rs  output_server.rs  rollups_server.rs  validator_manager_server.rs  voucher_server.rs
offchain/dispatcher/: Cargo.toml  Dockerfile  README.md  build.rs
offchain/dispatcher/src/: auth.rs  config.rs  dispatcher.rs  error.rs  lib.rs  main.rs  main_loop.rs  metrics.rs  rollups_dispatcher.rs  sender.rs  setup.rs
offchain/graphql-server/: Cargo.toml  README.md
offchain/graphql-server/src/: config.rs  error.rs  http.rs  lib.rs  main.rs
offchain/graphql-server/tests/: integration.rs
offchain/grpc-interfaces/: Cargo.toml  build.rs
offchain/grpc-interfaces/src/: conversions.rs  lib.rs
offchain/host-runner/: Cargo.toml  README.md
offchain/host-runner/src/: config.rs  controller.rs  conversions.rs  driver.rs  hash.rs  main.rs  model.rs  proofs.rs
offchain/host-runner/tests/: grpc.rs  http.rs
offchain/host-server-manager/: .gitmodules  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs
offchain/host-server-manager/src/: config.rs  controller.rs  conversions.rs  driver.rs  hash.rs  main.rs  model.rs  proofs.rs
offchain/host-server-manager/tests/: grpc.rs  http.rs
offchain/http-health-check/: Cargo.toml  README.md
offchain/http-health-check/src/: lib.rs
offchain/http-metrics/: Cargo.toml
offchain/http-metrics/src/: config.rs  lib.rs  metrics.rs
offchain/http-metrics/tests/: integration.rs
offchain/http-server/: Cargo.toml
offchain/http-server/src/: config.rs  lib.rs
offchain/indexer/: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  entrypoint-indexer.sh  entrypoint.sh  indexer-config.toml
offchain/indexer/src/: config.rs  conversions.rs  data_service.rs  db.rs  db_schema.rs  db_service.rs  error.rs  http.rs  indexer.rs  lib.rs  main.rs
offchain/indexer/tests/: docker-compose.yml  indexer-data-retrieval-tests.rs  indexer-db-tests.rs  integration.rs
offchain/inspect-server/: Cargo.toml  Dockerfile  README.md  build.rs
offchain/inspect-server/src/: config.rs  error.rs  grpc.rs  inspect.rs  lib.rs  main.rs  server.rs
offchain/inspect-server/tests/: integration.rs  payload.rs  queue.rs  response.rs
offchain/logs/: Cargo.toml
offchain/logs/src/: lib.rs
offchain/machine-hash/: Cargo.toml  Dockerfile
offchain/machine-hash/src/: main.rs
offchain/offchain/: Cargo.toml  Dockerfile  bs-config.toml  build.rs  entrypoint-dispatcher.sh  logic-config.toml  run-logic.sh  sf-config.toml  tm-config.toml
offchain/offchain/src/: config.rs  error.rs  lib.rs  main.rs  rollups_state_fold.rs
offchain/outputserver/: Cargo.toml  run_delegate_server.sh  run_delegate_server_kovan.sh  run_delegate_server_localhost.sh  run_delegate_server_matic_testnet.sh  run_delegate_server_rinkeby.sh  run_delegate_server_ropsten.sh
offchain/outputserver/src/: config.rs  delegate_manager.rs  error.rs  lib.rs  main.rs
offchain/reader/: Cargo.toml  Dockerfile  README.md  entrypoint-reader.sh
offchain/reader/src/: config.rs  error.rs  graphql.rs  http.rs  lib.rs  main.rs
offchain/reader/tests/: docker-compose.yml  reader-graphql-tests.rs
offchain/redacted/: Cargo.toml
offchain/redacted/src/: lib.rs
offchain/rollup-http-client/: Cargo.toml
offchain/rollup-http-client/src/: client.rs  lib.rs  rollup.rs
offchain/rollups-events/: Cargo.toml  README.md
offchain/rollups-events/src/: broker.rs  broker_tls_test.rs  common.rs  lib.rs  rollups_claims.rs  rollups_inputs.rs  rollups_outputs.rs  rollups_stream.rs  serializer_util.rs
offchain/rollups-events/tests/: broker_redis.rs  gen-test-certs.sh  indexer.rs  integration.rs  tls.Dockerfile  tls.rs
offchain/rollups-http-client/: Cargo.toml  README.md
offchain/rollups-http-client/src/: client.rs  lib.rs  rollup.rs
offchain/rollups-server/: Cargo.toml  run_delegate_server.sh  run_delegate_server_bsc_testnet.sh  run_delegate_server_goerli.sh  run_delegate_server_mainnet.sh
offchain/rollups-server/src/: delegate_manager.rs  main.rs
offchain/server-manager-broker-proxy/: Cargo.toml  README.md
offchain/src/: error.rs  main.rs
offchain/src/contracts/: mod.rs
offchain/state-fold/: Cargo.toml  README.md
offchain/state-fold-test/: Cargo.toml  build.rs
offchain/state-fold-types/: Cargo.toml
offchain/state-server/: Cargo.toml  Dockerfile  README.md
offchain/test-fixtures/: Cargo.toml  README.md
offchain/types/: Cargo.toml  README.md
(+1734 files in other folders)
