[workspace]
members = [
  "advance-runner",
  "contracts",
  "data",
  "dispatcher",
  "graphql-server",
  "grpc-interfaces",
  "host-runner",
  "http-health-check",
  "http-server",
  "indexer",
  "inspect-server",
  "redacted",
  "rollups-events",
  "rollups-http-client",
  "state-server",
  "test-fixtures",
  "types",
]
