[package]
name = "contracts"
version = "0.1.0"
edition = "2021"
authors = [
  "Felipe Argento <felipe@cartesi.io>",
  "Gabriel Coutinho <gabriel.coutinho@cartesi.io>",
  "Roman Hodulák <roman.hodulak@cartesi.io>",
]

[dependencies]
state-fold-types = { features = ["ethers"], version = "0.2", registry = "cartesi" }
serde_json = "1"

[build-dependencies]
state-fold-types = { features = ["ethers"], version = "0.2", registry = "cartesi" }
serde_json = "1"
