[package]
name = "advance-runner"
license = "Apache-2.0"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "advance-runner"
path = "src/main.rs"

[dependencies]
grpc-interfaces = { path = "../grpc-interfaces" }
http-health-check = { path = "../http-health-check" }
rollups-events = { path = "../rollups-events" }

async-trait = "0.1"
backoff = { version = "0.4", features = ["tokio"] }
clap = { version = "4.2", features = ["derive", "env"] }
hex = "0.4"
sha3 = { version = "0.10", features = ["std"] }
snafu = "0.7"
tokio = { version = "1", features = ["macros", "time", "rt-multi-thread"] }
tonic = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.3", features = ["v4"] }

[dev-dependencies]
test-fixtures = { path = "../test-fixtures" }

env_logger = "0.10"
rand = "0.8"
tempfile = "3.5"
testcontainers = "0.14"
test-log = { version = "0.2", features = ["trace"] }
