[package]
name = "advance-runner"
license = "Apache-2.0"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "cartesi-rollups-advance-runner"
path = "src/main.rs"

[dependencies]
grpc-interfaces = { path = "../grpc-interfaces" }
http-health-check = { path = "../http-health-check" }
rollups-events = { path = "../rollups-events" }

async-trait.workspace = true
backoff = { workspace = true, features = ["tokio"] }
clap = { workspace = true, features = ["derive", "env"] }
hex.workspace = true
sha3 = { workspace = true, features = ["std"] }
snafu.workspace = true
tokio = { workspace = true, features = ["macros", "time", "rt-multi-thread"] }
tonic.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
test-fixtures = { path = "../test-fixtures" }

env_logger.workspace = true
rand.workspace = true
tempfile.workspace = true
testcontainers.workspace = true
test-log = { workspace = true, features = ["trace"] }
