[package]
name = "contracts"
license = "Apache-2.0"
version = "1.0.0"
edition = "2021"

[dependencies]
eth-state-fold-types = { workspace = true, features = ["ethers"] }

[build-dependencies]
eth-state-fold-types = { workspace = true, features = ["ethers"] }

[package.metadata.cargo-machete]
ignored = ["eth-state-fold-types"]
