[package]
name = "rollups-data"
version = "0.9.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
redacted = { path = "../redacted" }

backoff = "0.4"
base64 = "0.21"
chrono = "0.4"
clap = { version = "4.2", features = ["derive", "env"] }
diesel_migrations = "2.0"
diesel = {version = "2.0", features = ["postgres", "chrono", "r2d2"]}
snafu = "0.7"
tracing = "0.1"
urlencoding = "2.1"

[dev-dependencies]
env_logger = "0.10"
testcontainers = "0.14"
test-log = { version = "0.2", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
test-fixtures = { path = "../test-fixtures" }
