[package]
name = "rollups-data"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
redacted = { path = "../redacted" }

backoff.workspace = true
base64.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
diesel_migrations.workspace = true
diesel = { workspace = true, features = ["postgres", "chrono", "r2d2"]}
snafu.workspace = true
tracing.workspace = true
urlencoding.workspace = true

[dev-dependencies]
test-fixtures = { path = "../test-fixtures" }

serial_test.workspace = true
env_logger.workspace = true
testcontainers.workspace = true
test-log = { workspace = true, features = ["trace"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
