[package]
name = "delegate_server"
license = "Apache-2.0"
version = "0.1.0"
authors = ["victornogueira <victor.nogueira@cartesi.io>"]
edition = "2018"

[[bin]]
name = "delegate_server_main"
path = "src/delegate_server_main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
state-fold = { git = "https://github.com/cartesi/state-fold", rev = "f6f06a1" }
state-server-grpc = { git = "https://github.com/cartesi/state-fold", rev = "f6f06a1" }
offchain = { path = "../offchain" }

ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "4690f8e" }

serde_json = "1.0"
snafu = "0.6"
tokio = { version = "^1.5", features = ["sync", "macros", "rt-multi-thread"] }
tonic = "0.4"
serde = "1.0.0"

[build-dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "4690f8e" }
serde_json = "1.0"
offchain = { path = "../offchain" }
