[package]
name = "delegate_server"
license = "Apache-2.0"
version = "0.1.0"
authors = ["victornogueira <victor.nogueira@cartesi.io>"]
edition = "2018"

[[bin]]
name = "output_server_main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configuration = { git = "https://github.com/cartesi/offchain-utils", tag = "v0.1.0" }
state-fold = { git = "https://github.com/cartesi-corp/state-fold", tag = "v0.1.0" }
state-server-grpc = { git = "https://github.com/cartesi-corp/state-fold", tag = "v0.1.0" }
offchain = { path = "../offchain" }

ethers = { version = "0.5.3" }

structopt = "0.3"

serde_json = "1.0"
snafu = "0.6"
tokio = { version = "^1.5", features = ["sync", "macros", "rt-multi-thread"] }
tonic = "0.4"
serde = { version = "1.0.0", features = ["rc"] }

[build-dependencies]
ethers = { version = "0.5.3" }
serde_json = "1.0"
offchain = { path = "../offchain" }
