[package]
name = "dispatcher"
license = "Apache-2.0"
version = "0.9.1"
edition = "2021"
authors = [
  "Felipe Argento <felipe.argento@cartesi.io>",
  "Gabriel Coutinho <gabriel.coutinho@cartesi.io>",
]

[[bin]]
name = "rollups_dispatcher"
path = "src/main.rs"

[dependencies]
contracts = { path = "../contracts" }
types = { path = "../types" }
rollups-events = { path = "../rollups-events" }

state-fold-types = { version = "0.6", registry = "cartesi", features = ["ethers"] }
state-client-lib =  { version = "0.6", registry = "cartesi" }
eth-tx-manager =  { version = "0.9" }

anyhow = "1"
serde = "1"
serde_json = "1"
snafu = "0.7"
clap = { version = "4.2", features = ["derive", "env"] }

tonic = "0.8"

async-trait = "0.1"
axum = "0.6"
backoff = { version = "0.4", features = ["tokio"] }
futures = "0.3"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[dev-dependencies]
im = { version = "15", features = ["serde"] }
rand = "0.8"
redis = "0.23"
testcontainers = "0.14"
test-fixtures = { path = "../test-fixtures" }

