[package]
name = "dispatcher"
license = "Apache-2.0"
version = "1.0.0"
edition = "2021"
authors = [
  "Felipe Argento <felipe.argento@cartesi.io>",
  "Gabriel Coutinho <gabriel.coutinho@cartesi.io>",
]

[[bin]]
name = "rollups_dispatcher"
path = "src/main.rs"

[dependencies]
contracts = { path = "../contracts" }
http-health-check = { path = "../http-health-check" }
types = { path = "../types" }
rollups-events = { path = "../rollups-events" }

state-client-lib =  { version = "0.6", registry = "cartesi" }
state-fold-types = { version = "0.6", registry = "cartesi", features = ["ethers"] }

async-trait = "0.1"
axum = "0.6"
backoff = { version = "0.4", features = ["tokio"] }
clap = { version = "4.2", features = ["derive", "env"] }
eth-tx-manager = "0.10"
ethers-signers = { version = "1.0", features = ["aws"] }
futures = "0.3"
rusoto_core = "0.48"
rusoto_kms = "0.48"
rusoto_sts = "0.48"
serde = "1"
serde_json = "1"
snafu = "0.7"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tonic = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[dev-dependencies]
test-fixtures = { path = "../test-fixtures" }

im = { version = "15", features = ["serde"] }
rand = "0.8"
redis = "0.23"
serial_test = "2.0"
testcontainers = "0.14"
tracing-test = { version = "0.2", features = ["no-env-filter"] }
