[package]
name = "dispatcher"
license = "Apache-2.0"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "rollups_dispatcher"
path = "src/main.rs"

[dependencies]
contracts = { path = "../contracts" }
http-server = { path = "../http-server" }
rollups-events = { path = "../rollups-events" }
types = { path = "../types" }

async-trait.workspace = true
axum.workspace = true
backoff = { workspace = true, features = ["tokio"] }
clap = { workspace = true, features = ["derive", "env"] }
eth-tx-manager.workspace = true
ethers-signers = { workspace = true, features = ["aws"] }
futures.workspace = true
hyper.workspace = true
rusoto_core.workspace = true
rusoto_kms.workspace = true
rusoto_sts.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
state-client-lib =  { workspace = true, registry = "cartesi" }
state-fold-types = { workspace = true, registry = "cartesi", features = ["ethers"] }
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
tokio-stream.workspace = true
tonic = "0.8" # TODO: the state-fold still uses this version
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
test-fixtures = { path = "../test-fixtures" }

im = { workspace = true, features = ["serde"] }
rand.workspace = true
redis.workspace = true
serial_test.workspace = true
testcontainers.workspace = true
tracing-test = { workspace = true, features = ["no-env-filter"] }
