[package]
name = "graphql-server"
version = "0.9.1"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "graphql-server"
path = "src/main.rs"

[[bin]]
name = "generate-schema"
path = "src/schema/generate_schema.rs"

[dependencies]
rollups-data = { path = "../data" }

actix-cors = "0.6"
actix-web = "4.3"
clap = { version = "4.2", features = ["derive", "env"] }
hex = "0.4"
juniper = "0.15"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "time", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
test-fixtures = { path = "../test-fixtures" }
testcontainers = "0.14"
awc = "3.1"
serial_test = "2.0"
chrono = "0.4"
