[package]
name = "graphql-server"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "graphql-server"
path = "src/main.rs"

[[bin]]
name = "generate-schema"
path = "src/schema/generate_schema.rs"

[dependencies]
http-health-check = { path = "../http-health-check" }
rollups-data = { path = "../data" }

actix-cors.workspace = true
actix-web.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
hex.workspace = true
juniper.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
snafu.workspace = true
tokio = { workspace = true, features = ["macros", "time", "rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true

[dev-dependencies]
test-fixtures = { path = "../test-fixtures" }

awc.workspace = true
chrono.workspace = true
serial_test.workspace = true
testcontainers.workspace = true
