[package]
name = "grpc-interfaces"
version = "1.0.0"
edition = "2021"

[dependencies]
state-fold-types = { path = "../state-fold-types" }

prost.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tonic.workspace = true

[build-dependencies]
tonic-build.workspace = true

[package.metadata.cargo-machete]
ignored = ["prost"]
