[package]
name = "host-runner"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "cartesi-rollups-host-runner"
path = "src/main.rs"

[dependencies]
grpc-interfaces = { path = "../grpc-interfaces" }
http-health-check = { path = "../http-health-check" }

actix-web.workspace = true
async-trait.workspace = true
byteorder.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
ethabi.workspace = true
futures-util.workspace = true
hex.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
sha3 = { workspace = true, features = ["std"] }
snafu.workspace = true
tokio = { workspace = true, features = ["macros", "time", "rt-multi-thread"] }
tonic.workspace = true
tonic-health.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
rollups-http-client = { path = "../rollups-http-client" }

mockall.workspace = true
rand.workspace = true
serial_test.workspace = true
tracing-test.workspace = true
