[package]
name = "http-metrics"
license = "Apache-2.0"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
prometheus-client = "0.20"
async-trait = "0.1"
axum = "0.6"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] } # TODO: features remove
clap = { version = "4.2", features = ["derive", "env"] }
tracing = "0.1"
