[package]
name = "http-metrics"
license = "Apache-2.0"
version = "1.0.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
clap = { version = "4.2", features = ["derive", "env"] }
prometheus-client = "0.20"
snafu = "0.7"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] } # TODO: features remove
tracing = "0.1"

actix-web = "4"
axum = "0.6"
hyper = "0.14"
