[package]
name = "indexer"
license = "Apache-2.0"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "indexer"
path = "src/main.rs"
test = false

[dependencies]
http-health-check = { path = "../http-health-check" }
rollups-data = { path = "../data" }
rollups-events = { path = "../rollups-events" }

chrono = "0.4"
clap = { version = "4.2", features = ["derive", "env"] }
snafu = "0.7"
tokio = { version = "1", features = ["macros", "time", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
test-fixtures = { path = "../test-fixtures" }

backoff = "0.4"
env_logger = "0.10"
rand = "0.8"
serial_test = "2.0"
test-log = { version = "0.2", features = ["trace"] }
testcontainers = "0.14"
