[package]
name = "indexer"
license = "Apache-2.0"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "cartesi-rollups-indexer"
path = "src/main.rs"
test = false

[dependencies]
http-health-check = { path = "../http-health-check" }
rollups-data = { path = "../data" }
rollups-events = { path = "../rollups-events" }

chrono.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
snafu.workspace = true
tokio = { workspace = true, features = ["macros", "time", "rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true

[dev-dependencies]
test-fixtures = { path = "../test-fixtures" }

backoff.workspace = true
env_logger.workspace = true
rand.workspace = true
serial_test.workspace = true
test-log = { workspace = true, features = ["trace"] }
testcontainers.workspace = true

