[package]
name = "inspect-server"
license = "Apache-2.0"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "inspect-server"
path = "src/main.rs"

[dependencies]
actix-web = "4.3"
actix-cors = "0.6"
anyhow = "1"
env_logger = "0.10"
hex = "0.4"
log = "0.4"
prost = "0.11"
regex = "1"
serde = { version = "1.0", features = ["rc", "derive"] }
snafu = "0.7"
structopt = "0.3"
tokio = { version = "1", features = ["macros", "time", "rt-multi-thread"] }
toml = "0.7"
tonic = "0.9"
uuid = { version = "1.3", features = ["v4"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
serial_test = "2.0"

[build-dependencies]
tonic-build = "0.9"

[package.metadata.cargo-machete]
ignored = ["prost"]
