[package]
name = "inspect-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "cartesi-rollups-inspect-server"
path = "src/main.rs"

[dependencies]
http-health-check = { path = "../http-health-check" }

actix-cors.workspace = true
actix-web.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
env_logger.workspace = true
hex.workspace = true
log.workspace = true
prost.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["rc", "derive"] }
snafu.workspace = true
tokio = { workspace = true, features = ["macros", "time", "rt-multi-thread"] }
toml.workspace = true
tonic.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
futures.workspace = true
reqwest = { workspace = true, features = ["json"] }
serial_test.workspace = true

[build-dependencies]
tonic-build.workspace = true

[package.metadata.cargo-machete]
ignored = ["prost"]
