[package]
name = "offchain"
license = "Apache-2.0"
version = "0.1.0"
authors = ["felipeargento <felipe@cartesi.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "offchain_main"
path = "src/main.rs"

[dependencies]
block-subscriber = { git = "https://github.com/cartesi/offchain-utils", rev = "38342b0" }
middleware-factory = { git = "https://github.com/cartesi/offchain-utils", rev = "38342b0" }
offchain-core = { git = "https://github.com/cartesi/offchain-utils", rev = "38342b0" }
configuration = { git = "https://github.com/cartesi/offchain-utils", rev = "38342b0" }
tx-manager = { git = "https://github.com/cartesi/tx-manager", rev = "61b4d85" }
state-fold = { git = "https://github.com/cartesi/state-fold", rev = "64f9c0e" }

ethers = { version = "0.5.3", features = [ "legacy", "ws" ] }
ethers-core = { version = "^0.5.0", features = [ "legacy" ] }
ethers-contract = { version = "^0.5.0", features = [ "legacy" ] }
ethers-providers = { version = "^0.5.0", features = [ "ws" ] }
ethabi = { version = "14.0.0", default-features = false }

async-recursion = "0.3.2"
async-trait = "0.1"
futures = "0.3"
im = { version = "15.0.0", features = ["serde"] }
prost = "0.8"
serde_json = "1.0"
structopt = "0.3"
snafu = "0.6"
tokio = { version = "^1.5", features = ["sync", "macros", "rt-multi-thread"] }
tonic = "0.5.0"
url = { version = "2.2.1", default-features = false }
serde = { version = "1.0.0", features = ["rc"] }
serde_yaml = "0.8"

[build-dependencies]
ethers = { version = "0.5.3", features = [ "legacy", "ws" ] }
serde_json = "1.0"
tonic-build = "0.5"
