[package]
name = "offchain"
license = "Apache-2.0"
version = "0.3.0"
authors = ["felipeargento <felipe@cartesi.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "offchain_main"
path = "src/main.rs"

[dependencies]
block-subscriber = { git = "https://github.com/cartesi/offchain-utils", tag = "v0.1.0" }
middleware-factory = { git = "https://github.com/cartesi/offchain-utils", tag = "v0.1.0" }
offchain-core = { git = "https://github.com/cartesi/offchain-utils", tag = "v0.1.0" }
configuration = { git = "https://github.com/cartesi/offchain-utils", tag = "v0.1.0" }
tx-manager = { git = "https://github.com/cartesi/tx-manager", tag = "v0.1.0" }
state-fold = { git = "https://github.com/cartesi/state-fold", tag = "v0.1.0" }

ethers = { version = "0.5.3", features = [ "legacy", "ws" ] }
ethers-core = { version = "^0.5.0", features = [ "legacy" ] }
ethers-contract = { version = "^0.5.0", features = [ "legacy" ] }
ethers-providers = { version = "^0.5.0", features = [ "ws" ] }
ethabi = { version = "14.0.0", default-features = false }

async-recursion = "0.3.2"
async-trait = "0.1"
diesel = {version = "1.4.8", features = ["chrono", "postgres", "r2d2", "uuidv07", "serde_json"]}
futures = "0.3"
im = { version = "15.0.0", features = ["serde"] }
serde_json = "1.0"
structopt = "0.3"
snafu = "0.6"
tokio = { version = "^1.5", features = ["sync", "macros", "rt-multi-thread"] }
prost = "0.10"
tonic = "0.7"
url = { version = "2.2.1", default-features = false }
serde = { version = "1.0.0", features = ["rc"] }
serde_yaml = "0.8"
uuid = { version = "0.8.2", features = ["v5"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
ethers = { version = "0.5.3", features = [ "legacy", "ws" ] }
serde_json = "1.0"
tonic-build = "0.7"
