[package]
name = "reader"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
authors = ["marko atanasievski <marko.atanasievski@cartesi.io>"]

[dependencies]
diesel = {version = "1.4.8", features = ["postgres", "r2d2"]}
rollups-data = { path = "../data" }
juniper = "0.15.9"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"
actix-web = "3.3"
futures = "0.1.31"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.17", features = ["macros", "time", "rt-multi-thread"] }
snafu = "0.6"
structopt = "0.3"
urlencoding = "2.1"