[package]
name = "rollups-events"
version = "0.1.0"
edition = "2021"

[dependencies]
backoff = { version = "0.4", features = ["tokio"] }
base64 = "0.21"
clap = { version = "4.0", features = ["derive", "env"] }
hex = "0.4"
redis = { version = "0.21", features = ["streams", "tokio-comp", "connection-manager"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
snafu = "0.7"
tokio = { version = "1.21", features = ["macros", "time", "rt-multi-thread"] }
tracing = "0.1"

[dev-dependencies]
env_logger = "0.9"
testcontainers = "0.14"
test-log = { version = "0.2", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
