[package]
name = "rollups-events"
version = "1.0.0"
edition = "2021"

[dependencies]
redacted = { path = "../redacted" }

backoff = { workspace = true, features = ["tokio"] }
base64.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
hex.workspace = true
prometheus-client.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
snafu.workspace = true
tokio = { workspace = true, features = ["macros", "time", "rt-multi-thread"] }
tracing.workspace = true

redis = { workspace = true, features = [
    "streams",
    "tokio-comp",
    "connection-manager",
    "tls-native-tls",
    "tokio-native-tls-comp",
] }

[dev-dependencies]
env_logger.workspace = true
test-log = { workspace = true, features = ["trace"] }
testcontainers.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
