[package]
name = "rollups-http-client"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
hyper = { workspace = true, features = ["http1", "runtime", "client"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
